Editor: Fixed alignment issue in code mirror.

--- a/editor/css/light.css
+++ b/editor/css/light.css
@@ -128,6 +128,10 @@ input.Number {
 	overflow: auto;
 }
 
+	#sidebar * {
+		vertical-align: middle;
+	}
+
 	#sidebar input,
 	#sidebar textarea,
 	#sidebar select {
